<resources>
    <string name="amendments">Amendments</string>
    <string name="app_name">OpenHDS Mobile</string>
    <string name="bad_authentication">Authentication Failed</string>
    <string name="bad_xml">Error parsing XML</string>
    <string name="changePassword">Change Password</string>
    <string name="changeServer">Change Server</string>
    <string name="changeUsername">Change Username</string>
    <string name="configuration">Configuration</string>
    <string name="configureDatabase">Configure Database</string>
    <string name="delete_form_btn">Delete Form(s)</string>
    <string name="download_form_button">Download Forms</string>
    <string name="failure_reasons_txt">Failure messages:</string>
    <string name="fatherNotFound">A father could not be found</string>
    <string name="field_worker_already_exists">Field Worker already exists</string>
    <string name="field_worker_created">Field Worker Successfully Created</string>
    <string name="form_status">Form Status:</string>
    <string name="form_view_lbl">Form View</string>
    <string name="household_not_found">A household was not found for this Individual</string>
    <string name="idGenerationFailure">An error occurred while generating an id</string>
    <string name="location_lbl">Location:</string>
    <string name="form_lbl">Form:</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="main_txt">Form Management</string>
    <string name="openhdswebservice">OpenHDS Web Service</string>
    <string name="owner_txt">Form Owner Id:</string>
    <string name="passwordHash">OpenHDS Password</string>
    <string name="retrieving_fieldworkers_interrupted">Retrieving Field Workers has been interrupted</string>
    <string name="send_to_odk_btn">Edit in ODK</string>
    <string name="shared_pref_file_name">server_prefs</string>
    <string name="shared_pref_server_url_key">server_url</string>
    <string name="sync_forms_successful">Forms Collected Successfully</string>
    <string name="sync_forms_failure">Failed to Collect the forms</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="update">Update</string>
    <string name="username">OpenHDS Username</string>
    <string name="view_forms_btn">View My Forms</string>
    <string name="see_list">See List</string>
    <string name="location_hint_lbl">Location External Id</string>
    <string name="form_hint_lbl">Form Name</string>
    <string name="firstname_lbl">First Name:</string>
    <string name="firstname_hint_lbl">First Name</string>
    <string name="lastname_lbl">Last Name:</string>
    <string name="lastname_hint_lbl">Last Name</string>
    <string name="gender_lbl">Gender</string>
    <string name="clear_lbl">Clear</string>
    <string name="external_id_lbl">ExtId:</string>
    <string name="hierarchy1_select_lbl">Select Region</string>
    <string name="hierarchy1_lbl">Region:</string>
    <string name="hierarchy1_hint_lbl">Region External Id</string>
    <string name="hierarchy2_select_lbl">Select Map Area</string>
    <string name="hierarchy2_lbl">Map Area:</string>
    <string name="hierarchy2_hint_lbl">Map Area External Id</string>
    <string name="hierarchy3_select_lbl">Select Sector</string>
    <string name="hierarchy3_lbl">Sector:</string>
    <string name="hierarchy3_hint_lbl">Sector External Id</string>
    <string name="hierarchy4_select_lbl">Select Building</string>
    <string name="hierarchy4_lbl">Building:</string>
    <string name="hierarchy4_hint_lbl">Building External Id</string>
    <string name="hierarchy5_select_lbl">Select Floor</string>
    <string name="hierarchy5_lbl">Floor:</string>
    <string name="hierarchy5_hint_lbl">Floor External Id</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="fieldworker_login">Field Worker Login</string>
    <string name="supervisor_login">Supervisor Login</string>
    <string name="preferences">Preferences</string>
    <string name="openhds_server_url_key">openhds_server_url</string>
    <string name="interop_server_url_key">interop_server_url</string>
    <string name="openhds_server_url_default_summary">Same URL used for OpenHDS Server via Web browser</string>
    <string name="openhds_server_url_title">OpenHDS Server URL</string>
    <string name="landscape_layout_tag">landscape</string>
    <string name="portrait_layout_tag">portrait</string>
    <string name="supervisor_bad_credentials">Invalid supervisor credentials</string>
    <string name="preference_invalid_label">Invalid!</string>
    <string name="preference_invalid_warning">Invalid preference value</string>
    <string name="send_finalized_forms_label">Send Forms using ODK</string>
    <string name="send_finalized_forms_description">Send Finished Forms to ODK Aggregate</string>
    <string name="register_odk_form_definitions_label">Register Forms</string>
    <string name="register_odk_form_definitions_description">Register bundled form definitions with ODK Collect</string>
    <string name="send_forms_to_openhds_label">Send Forms to OpenHDS</string>
    <string name="send_forms_to_openhds_description">Send Finished Forms to the OpenHDS server</string>
    <string name="delete_recent_forms_label">Delete Forms</string>
    <string name="delete_recent_forms_description">Delete Forms Created Since Last Sync</string>
    <string name="approve_recent_forms_label">Approve Forms</string>
    <string name="approve_recent_forms_description">Approve Forms Created Since Last Sync</string>
    <string name="field_worker_bad_credentials">Invalid field worker credentials</string>
    <string name="region_label">Region</string>
    <string name="province_label">Province</string>
    <string name="district_label">District</string>
    <string name="locality_label">Locality</string>
    <string name="map_area_label">Map Area</string>
    <string name="sector_label">Sector</string>
    <string name="household_label">Household</string>
    <string name="individual_label">Individual</string>
    <string name="bottom_label">Bottom</string>
    <string name="create_location">Create new Household</string>
    <string name="create_head_of_household_label">Create Head of Household</string>
    <string name="evaluate_location_label">Evaluate Location</string>
    <string name="add_member_of_household_label">Add Member of Household</string>
    <string name="edit_individual_label">Edit Individual</string>
    <string name="house_of_prefix">House of</string>
    <string name="default_openhds_server_url">https://arcane-lake-8447.herokuapp.com</string>
    <string name="supervisor_login_url"></string>
    <string name="sync_field_workers_path">/api/rest/fieldworkers</string>
    <string name="sync_individuals_path">/api/rest/individuals/cached</string>
    <string name="sync_location_hierarchies_path">/api/rest/locationhierarchies</string>
    <string name="sync_locations_path">/api/rest/locations/cached</string>
    <string name="sync_memberships_path">/api/rest/memberships/cached</string>
    <string name="sync_relationships_path">/api/rest/relationships/cached</string>
    <string name="sync_social_groups_path">/api/rest/socialgroups/cached</string>
    <string name="sync_visits_path">/api/rest/visits/cached</string>
    <string name="toggle_fragment_button_show_details">Show Details</string>
    <string name="toggle_fragment_button_none">None</string>
    <string name="toggle_fragment_button_show_children">Hide Details</string>
    <string name="not_available">N/A</string>
    <string name="details_not_available">Details Not Available</string>
    <string name="db_val_true">True</string>
    <string name="db_val_false">False</string>
    <string name="db_val_age_units_years">Years</string>
    <string name="db_val_age_units_months">Months</string>
    <string name="db_val_gender_male">Male</string>
    <string name="db_val_gender_female">Female</string>
    <string name="db_val_language_pref_spanish">Spanish</string>
    <string name="db_val_language_pref_fang">Fang</string>
    <string name="db_val_language_pref_bubi">Bubi</string>
    <string name="db_val_language_pref_english">English</string>
    <string name="db_val_language_pref_french">French</string>
    <string name="db_val_language_pref_other">Other</string>
    <string name="db_val_status_permanent">Permanent</string>
    <string name="db_val_status_visitor">Visitor</string>
    <string name="db_val_relation_to_head_type_head">Head</string>
    <string name="db_val_relation_to_head_type_spouse">Spouse</string>
    <string name="db_val_relation_to_head_type_son_daughter">Son/Daughter</string>
    <string name="db_val_relation_to_head_type_brother_sister">Brother/Sister</string>
    <string name="db_val_relation_to_head_type_cousin">Cousin</string>
    <string name="db_val_relation_to_head_type_nephew_niece">Nephew/Niece</string>
    <string name="db_val_relation_to_head_type_parent">Parent</string>
    <string name="db_val_relation_to_head_type_grandchild">Grandchild</string>
    <string name="db_val_relation_to_head_type_not_related">Not Related</string>
    <string name="db_val_relation_to_head_type_other_relative">Other Relative</string>
    <string name="db_val_relation_to_head_type_dont_know">Don\'t Know</string>
    <string name="db_val_nationality_equato_guinean">Equato Guinean</string>
    <string name="db_val_nationality_other_african_country">Other African Country</string>
    <string name="db_val_nationality_asian">Asian</string>
    <string name="db_val_nationality_other_non_african_country">Other Non-African Country</string>
    <string name="db_val_nationality_other">Other</string>
    <string name="db_val_location_status_never_available">Never Available</string>
    <string name="db_val_location_status_rejected_intervention">Rejected Intervention</string>
    <string name="db_val_location_status_uninhabited">Uninhabited</string>
    <string name="search_database_description">Search the Database</string>
    <string name="search_database_label">Search</string>
    <string name="search_done_label">Done</string>
    <string name="search_in_progress_label">Searching&#8230;</string>
    <string name="search_results_label">Results</string>
    <string name="search_individual_label">Find an Individual</string>
    <string name="search_father_label">Find Father</string>
    <string name="search_location_label">Find a Location</string>
    <string name="search_social_group_label">Find a Household</string>
    <string name="search_field_worker_label">Find a Field Worker</string>
    <string name="sync_database_label">Sync Database</string>
    <string name="sync_database_canceled">canceled</string>
    <string name="sync_database_description">Download data from the server</string>
    <string name="sync_database_choose_min_date">Sync data since when?</string>
    <string name="sync_database_column_sync">Sync</string>
    <string name="sync_database_column_date">Date Range</string>
    <string name="sync_database_column_count">Count</string>
    <string name="sync_database_button_sync">Sync</string>
    <string name="select_all_label">Select All</string>
    <string name="select_none_label">Select None</string>
    <string name="select_incomplete_label">Select Incomplete</string>
    <string name="select_complete_label">Select Completed</string>
    <string name="select_submitted_label">Select Submitted</string>
    <string name="select_submission_failed_label">Select Failed</string>
    <string name="show_submitted_label">Show Submitted?</string>
    <string name="upload_selected_label">Upload</string>
    <string name="mark_as_incomplete_label">Mark as Incomplete</string>
    <string name="mark_as_complete_label">Mark as Completed</string>
    <string name="mark_as_submitted_label">Skip</string>
</resources>